...
            ),
          ),
          SizedBox(height: 16.h),

          // Title
          Text(
            'Stay Logged In?',
            style: AppTextStyle.font16SemiBold.copyWith(
              fontWeight: FontWeight.w700,
              color: AppColors.smallText,
            ),
            textAlign: TextAlign.center,
          ),
...
            textAlign: TextAlign.center,
          ),
          SizedBox(height: 24.h),

          // Option 1: Enable & Login
          AppElevatedButton(
            title: 'Enable & Log In',
            onPressed: onEnableAndLogin,
            height: 46,
            borderRadius: 12,
          ),
          SizedBox(height: 10.h),

...
