...
                ),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    const SignUpHeaderSection(currentStep: 4),
                    Text(
                      'Email Confirmation:',
                      style: TextStyle(
                        color: const Color(0xFF1D1D1F),
                        fontSize: 16.sp,
                        fontWeight: FontWeight.bold,
                        fontFamily: 'Inter',
                      ),
...
